add set default selected position

--- a/example/src/main/res/values/strings.xml
+++ b/example/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">Example</string>
 
     <string-array name="tesItems">
-        <item>teszteljünk egyet</item>
+        <item>teszteljünk elkadsmfga sdmlkgads mglka mdslgk masdlgk msdlkg malskd gmlksd mglkadsmg akmg lakdsmg lksdm glk magyet</item>
         <item>teszt két</item>
         <item>teszt három</item>
     </string-array>
